# git-guardian

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  coverage.xml  guardian-technical-specification-v0.3.1.md  install.sh  pyproject.toml
.enaible/artifacts/create-execplan/20260208T141132Z/: execplan.md  (+7 more)
.github/workflows/: ci-quality-gates.yml
.guardian/: config.yaml  ruff.toml  semgrep-rules.yaml
docs/reference/: INSTALL_ANALYSIS.md  guardian-technical-spec.md
quality/: complexity-budget.json
scripts/: quality_metrics.py  run-ci-quality-gates.sh  test_install.sh
src/guardian/: __init__.py  __main__.py  configuration.py
src/guardian/analysis/: __init__.py  config_drift.py  coverage.py  eslint.py  git_utils.py  pipeline.py  quality_commands.py  ruff.py  semgrep.py  tool_runner.py  violation.py
src/guardian/cli/: __init__.py  baseline.py  config.py  harness.py  init.py  main.py  output.py  push.py  report.py  scan.py  verify.py
src/guardian/configuration/: __init__.py  loader.py  parsing.py  schema.py  validation.py
src/guardian/harness/: __init__.py  installer.py
src/guardian/report/: __init__.py  generator.py
tests/: conftest.py  integration_harness.py  test_analysis.py  test_analysis_pipeline.py  test_cli_commands.py  test_config_drift.py  test_configuration.py  test_coverage_runner.py  test_harness_status.py  test_integration_fixtures.py  test_integration_smoke.py  test_quality_commands.py  test_report.py  test_smoke.py  test_subprocess_gateway.py  test_tool_runner.py
tests/fixtures/integration/: README.md
(+26 files in other folders)
